security/network_policies/db/db-2-policy.yml
# zuerst wurden namespaces gelabeled
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-db-2
  namespace: db-2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: temp
      podSelector:
        matchLabels:
          app: accounts-api
    - namespaceSelector:
        matchLabels:
          name: db-job
      podSelector:
        matchLabels:
          app: cron
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: temp
      podSelector:
        matchLabels:
          app: accounts-api
    - namespaceSelector:
        matchLabels:
          name: db-job
      podSelector:
        matchLabels:
          app: cron

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: db-2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  - Egress
